Provide a way to determine available ECC Curves
Closed, ResolvedPublic

Assigned To
Authored By
npcole
Mar 6 2015, 1:13 PM
Subscribers

Description

The curves available when generating / using ECC curves depend upon libgcrypt. This
means that one can not tell from the version number of gnupg.

Could the --version output give a list of available curves? (in recommended order of
use?)

Details

Version
2.1

Event Timeline

npcole set Version to 2.1.
npcole added a subscriber: npcole.

Done with commit 14af2be

$ gpg --with-colons --list-config curve
cfg:curve:ed25519;nistp256;nistp384;nistp521;brainpoolP256r1;brainpoolP384r1;brainpoolP512r1;secp256k1

werner claimed this task.